Sat Apr  5 14:54:38 UTC 2008 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - data/drivers.list: added models supported by megatec and megatec_usb
 - drivers/megatec.c: backport from the trunk (better at handling bad data)

Sat Apr  5 13:49:46 UTC 2008 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - drivers/megatec_usb.c: (backported from trunk r1168, r1211)
   added reconnect support.

Sat Apr  5 13:41:43 UTC 2008 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - drivers/megatec_usb.c: (backported from trunk r1151)
   merged all functionality of get_data_krauler
   to set_data_krauler thus removing most sources of code duplication
   in krauler subdriver.

Wed Apr  2 20:09:41 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - common/state.[ch]: make the command list sorted (so that commands
   will be listed in alphabetic order by upscmd)

2.2.2-pre1

Wed Apr  2 14:22:02 UTC 2008 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - configure.in: change version to 2.2.2-pre1.
 - UPGRADING: fix a typo

Tue Apr  1 09:03:20 UTC 2008 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - include/Makefile.am: remove GNU Make extensions from rule to create
   nut_version.h, and handle case where svnversion does not exist.
   (backport from trunk, r1207, Charles Lepple)

Mon Mar 31 19:21:05 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - clients/upsclient.c: parameter checking would segfault on NULL
   pointers in upscli_read/sendline

Thu Mar 27 20:24:54 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml-ups: default to 5 seconds if pollinterval is not
   specified (to prevent overloading older NMCs by default)

Thu Mar 27 15:39:43 UTC 2008 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - UPGRADING: prefer calling "upsmon -c fsd" for usbhid-ups testing
 
Wed Mar 26 09:47:32 UTC 2008 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - ChangeLog: trimmed everything previous to 2.2.0

Wed Mar 26 09:47:32 UTC 2008 / Arnaud Quette <ArnaudQuette@Eaton.com>
